# pytesting

./: README.md  corrupted_students.csv  pyproject.toml  students.csv
pytesting/: parser.py  streamlit.py
tests/: test_parser.py  test_streamlit.py
