[tool.poetry]
name = "pytesting"
version = "0.1.0"
description = ""
authors = ["Ian DesJardins <ian.desjardins@ithaka.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
