[tool.poetry]
name = "pytesting"
version = "0.1.0"
description = ""
authors = ["Ian DesJardins <ian.desjardins@ithaka.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.1.1"
flake8 = "^7.0.0"

[tool.pytest.ini_options]
addopts = ["-s", "-vvv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
